--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 backtesting==0.3.3
 ta-lib==0.4.24
 yfinance==0.1.74
+pandas==1.4.3
+typer==0.6.1
+pyperclip==1.8.2
+rich==12.5.1
+num2words==0.5.11
