Specify preferred metrics in results.

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,6 @@
 [Optimization]
 default_optimizer = SQN
+
+
+[Results]
+preferred_metrics = Buy & Hold Return [%], Return (Ann.) [%], Volatility (Ann.) [%], SQN, Sharpe Ratio, Sortino Ratio, Max. Drawdown [%], Max. Drawdown Duration, Win Rate [%], Start, End, Exposure Time [%]
