--- a/config.ini
+++ b/config.ini
@@ -4,3 +4,6 @@ default_optimizer = SQN
 
 [Results]
 preferred_metrics = Buy & Hold Return [%], Return (Ann.) [%], Volatility (Ann.) [%], SQN, Sharpe Ratio, Sortino Ratio, Max. Drawdown [%], Max. Drawdown Duration, Win Rate [%], Start, End, Exposure Time [%]
+highlight_preferred = SQN, Sharpe Ratio, Sortino Ratio
+highlight_preferred_style = underline
+secondary_metrics_style = dim
