--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-backtesting==0.3.3
+git+https://github.com/preritdas/backtesting.py.git@progress-bar  # progress bar PR
 ta-lib==0.4.24
 yfinance==0.1.74
 pandas==1.4.3
