--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ git+https://github.com/preritdas/backtesting.py.git@progress-bar  # progress bar
 scikit-optimize==0.9.0
 ta-lib==0.4.24
 yfinance==0.1.74
+finnhub-python==2.4.14
 pandas==1.4.3
 typer==0.6.1
 pyperclip==1.8.2
