Privately store old index.html file, prior to Ulysses export.

--- a/firebase.json
+++ b/firebase.json
@@ -5,7 +5,8 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**",
-      "**/optimizers/**"
+      "**/optimizers/**",
+      "**/oldindex.html"
     ],
     "headers": [
       {
