--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,7 @@
       "**/.*",
       "**/node_modules/**",
       "**/optimizers/**",
+      "**/raw/**",
       "**/oldindex.html"
     ],
     "headers": [
