Optionalize parameter enforcement.
Add the option to _not_ enforce system parameters' existence and structure.

--- a/config.ini
+++ b/config.ini
@@ -7,3 +7,7 @@ preferred_metrics = Buy & Hold Return [%], Return (Ann.) [%], Volatility (Ann.) 
 highlight_preferred = SQN, Sharpe Ratio, Sortino Ratio
 highlight_preferred_style = underline
 secondary_metrics_style = dim
+
+
+[Systems]
+parameter_enforcement = true
