Add deadsnakes PPA repo to install python3.10-dev.

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -20,7 +20,8 @@ jobs:
         run: |
           sudo apt update && sudo apt upgrade -y
           sudo apt install curl -y
-          sudo apt-get install python3.10-dev -y
+          sudo add-apt-repository ppa:deadsnakes/ppa
+          sudo apt install python3.10-dev -y
           curl http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz --output ta-lib-0.4.0-src.tar.gz
           tar -xvf ta-lib-0.4.0-src.tar.gz
           cd ta-lib
