--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -19,11 +19,13 @@ jobs:
       - name: Install TA-Lib
         run: |
           sudo apt update && sudo apt upgrade -y
-          sudo apt install curl -y
+          sudo apt install wget -y
           sudo add-apt-repository ppa:deadsnakes/ppa
+          sudo apt-get install build-essential -y
           sudo apt install python3.10-dev -y
-          curl http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz --output ta-lib-0.4.0-src.tar.gz
-          tar -xvf ta-lib-0.4.0-src.tar.gz
+          sudo apt-get install python3-dev -y
+          wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz
+          tar -xzf ta-lib-0.4.0-src.tar.gz
           cd ta-lib
           ./configure --prefix=/usr
           make
