--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -40,6 +40,10 @@ jobs:
           pip install -r requirements.txt
           pip install pytest
 
+      - name: Inject keys
+        run: |
+          echo '[Finnhub]\napi_key = ${{ secrets.FINNHUB_API_KEY }}' >> keys.ini
+
       - name: Test with pytest
         run: |
           python -m pytest
