--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -61,9 +61,20 @@ jobs:
 
       - name: Initialize test dependencies
         run: |
-          pip install -U pytest
+          pip install -U pytest-cov coverage-badge
           python main.py cache init aapl
 
       - name: Run tests with pytest
-        run: |
-          python -m pytest
+        # Only commit the badge from Linux
+        uses: knicknic/os-specific-run@v1.0.3
+        with: 
+          linux: |
+            python -m pytest --cov
+            coverage-badge -o tests/badge.svg
+            git add tests/badge.svg
+            git commit -m "Coverage badge updated after tests."
+            git push
+          macos: |
+            python -m pytest
+          windows: |
+            python -m pytest
