Add self as co-author to badge update commit in actions.

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -75,7 +75,7 @@ jobs:
             git config --global user.name "github-actions[bot]"
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
             git add tests/badge.svg
-            git commit -m "Coverage badge updated after tests."
+            git commit --author="Prerit Das <preritdas@gmail.com>" -m "Coverage badge updated after tests."
             git push
           macos: |
             python -m pytest
