--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -70,7 +70,7 @@ jobs:
         uses: knicknic/os-specific-run@v1.0.3
         with: 
           linux: |
-            coverage-badge -o tests/badge.svg
+            coverage-badge -o tests/badge.svg -f
             git config --global user.name "github-actions[bot]"
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
             git add tests/badge.svg
