Only run tests on Ubuntu due to excessive multipliers.
The matrix strategy lines that distribute the action to all three platforms have only been commented, not deleted. So, to run a remote test on all platforms and pay the expensive minutes cost, uncomment those lines and commit the file.

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,12 +5,13 @@ on: [push, pull_request]
 jobs:
   test:
 
-    strategy:
-      fail-fast: false
-      matrix:
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+    # strategy:
+    #   fail-fast: false
+    #   matrix:
+    #     os: ["ubuntu-latest", "macos-latest", "windows-latest"]
 
-    runs-on: ${{ matrix.os }}
+    # runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
       - name: Check out repository code
@@ -37,7 +38,6 @@ jobs:
             ./configure --prefix=/usr
             make
             sudo make install
-            sudo apt update && sudo apt upgrade -y
           macos: |
             /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
             brew install ta-lib
