--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,7 +6,7 @@ jobs:
   test:
 
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os: ["ubuntu-latest"]
         python: ["3.10"]
@@ -65,15 +65,13 @@ jobs:
       - name: Run tests with pytest
         run: python -m pytest --cov
 
-      - name: Update tests coverage badge (only Ubuntu)
+      - name: Update tests coverage badge
         if: ${{ ( success() || failure() ) && matrix.os == 'ubuntu-latest' && matrix.python == '3.10' }}
         continue-on-error: true
-        uses: knicknic/os-specific-run@v1.0.3
-        with: 
-          linux: |
-            coverage-badge -o tests/badge.svg -f
-            git config --global user.name "github-actions[bot]"
-            git config --global user.email "github-actions[bot]@users.noreply.github.com"
-            git add tests/badge.svg
-            git commit --author="Prerit Das <preritdas@gmail.com>" -m "Coverage badge updated after tests."
-            git push
+        run: |
+          coverage-badge -o tests/badge.svg -f
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add tests/badge.svg
+          git commit --author="Prerit Das <preritdas@gmail.com>" -m "Update coverage badge post unit tests."
+          git push
