Full proper installation of ta-lib on Ubuntu.

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,18 +26,24 @@ jobs:
         uses: knicknic/os-specific-run@v1.0.3
         with:
           linux: |
-            sudo apt update && sudo apt upgrade -y
+            sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y
             sudo apt install wget -y
-            sudo add-apt-repository ppa:deadsnakes/ppa
+            sudo add-apt-repository ppa:deadsnakes/ppa -y
             sudo apt-get install build-essential -y
             sudo apt install python3.10-dev -y
             sudo apt-get install python3-dev -y
+
             wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz
             tar -xzf ta-lib-0.4.0-src.tar.gz
             cd ta-lib
+
+            wget 'http://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.guess;hb=HEAD' -O './config.guess'
+            wget 'http://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.sub;hb=HEAD' -O './config.sub'
             ./configure --prefix=/usr
             make
             sudo make install
+
+            pip install ta-lib
           macos: |
             /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
             brew install ta-lib
