Don't run when only read-me changes.

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,6 +6,9 @@ name: firebase deployment
   push:
     branches:
       - master
+    paths-ignore:
+      - "README.md"
+    
 jobs:
   deploy:
     runs-on: ubuntu-latest
