--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,6 +17,8 @@ jobs:
         
       - name: Setup Python
         uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
         
       - name: Install dependencies
         run: |
