--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,11 +20,14 @@ jobs:
         with:
           python-version: "3.10"
         
-      - name: Install dependencies
+      - name: Setup pip and typer-cli
         run: |
           pip install -U pip wheel
-          pip install -r requirements.txt
           pip install typer-cli
+          
+      - name: Install project dependencies
+        continue-on-error: true
+        run: pip install -r requirements.txt
           
       - name: Display docs
         run: |
