Install ta-lib.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,6 +19,24 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+
+      - name: Install TA-Lib
+        run: |
+          sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y
+          sudo apt install wget -y
+          sudo add-apt-repository ppa:deadsnakes/ppa -y
+          sudo apt-get install build-essential -y
+          sudo apt install python3.10-dev -y
+          sudo apt-get install python3-dev -y
+          wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz
+          tar -xzf ta-lib-0.4.0-src.tar.gz
+          cd ta-lib
+          wget 'http://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.guess;hb=HEAD' -O './config.guess'
+          wget 'http://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.sub;hb=HEAD' -O './config.sub'
+          ./configure --prefix=/usr
+          make
+          sudo make install
+          pip install ta-lib
         
       - name: Setup pip and typer-cli
         run: |
@@ -27,7 +45,6 @@ jobs:
           
       - name: Install project dependencies
         run: |
-          sed -i "/ta-lib==0.4.24/d" requirements.txt
           sed -i "/typer==0.6.1/d" requirements.txt
           pip install -r requirements.txt
           
