--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -68,5 +68,5 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
-          git commit --author="Prerit Das <preritdas@gmail.com>" -m "Updated CLI reference in read-me."
+          git commit --author="Prerit Das <preritdas@gmail.com>" -m "Update CLI reference in read-me."
           git push
