--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Build docs with sphinx
         run: |
           pip install -r docs/requirements.txt
-          cd docs && make html
+          cd docs && make html && cd ..
 
       - name: Commit updated doc files 
         run: |
