--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -72,7 +72,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add docs/source/cli.md
-          git commit --author="Prerit Das <preritdas@gmail.com>" -m "Update CLI documentation."
+          git diff-index --quiet HEAD || git commit --author="Prerit Das <preritdas@gmail.com>" -m "Update CLI documentation."
           git add docs/build/*
-          git commit --author="Prerit Das <preritdas@gmail.com>" -m "Build documentation."
+          git diff-index --quiet HEAD || git commit --author="Prerit Das <preritdas@gmail.com>" -m "Build documentation."
           git push
