--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          sudo apt-get install python3-dev
+          sudo apt-get install -y python-dev python3-dev python3.10-dev
           pip install -r requirements.txt
 
       - name: Inject keys
