--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,7 +26,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools wheel
           sudo apt-get install -y python-dev python3-dev python3.10-dev
+          sed -i "/ta-lib==0.4.24/d" requirements.txt
           pip install -r requirements.txt
+          pip install ta-lib
 
       - name: Inject keys
         run: |
