Don’t run tests on doc or md changes.

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -3,8 +3,9 @@ name: tests
 on:
   push:
     paths-ignore:
-      - "README.md"
+      - "*/**/*.md"
       - "*/**/*.html"
+      - "docs/*"
   pull_request:
   workflow_dispatch:
 
