--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,8 @@
 sphinx==5.1.1
 
+# Extensions
 myst-parser==0.18.0
-sphinx-rtd-theme==1.0.0
+sphinx-tabs==3.4.1
+
+# Themes
+git+https://github.com/preritdas/sphinx_rtd_theme.git  # docutils version support
