--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -36,7 +36,7 @@ jobs:
           echo -en '${{ secrets.KEYS_INI }}' >> keys.ini
 
       - name: Initialize test dependencies
-        run: pip install -U pytest-cov coverage-badge
+        run: pip install -r tests/requirements.txt
 
       - name: Run tests with pytest
         run: python -m pytest --cov
