--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,7 +2,9 @@
 # https://github.com/firebase/firebase-tools
 
 name: firebase deployment
-'on':
+
+
+on:
   push:
     branches:
       - master
@@ -13,9 +15,42 @@ name: firebase deployment
       - completed
   workflow_dispatch:
     
+
 jobs:
+  test:
+    runs-on: self-hosted
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          sudo apt-get install -y python-dev python3-dev python3.10-dev
+          sed -i "/ta-lib==0.4.24/d" requirements.txt
+          pip install -r requirements.txt
+          pip install ta-lib
+
+      - name: Inject keys
+        run: |
+          echo -en '${{ secrets.KEYS_INI }}' >> keys.ini
+
+      - name: Initialize test dependencies
+        run: pip install -r tests/requirements.txt
+
+      - name: Run tests with pytest
+        run: python -m pytest
+
   deploy:
+    needs: test
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
       - uses: FirebaseExtended/action-hosting-deploy@v0
