--- a/.github/workflows/docs-preself.yml
+++ b/.github/workflows/docs-preself.yml
@@ -31,14 +31,20 @@ jobs:
           sudo apt-get install build-essential -y
           sudo apt install python3.10-dev -y
           sudo apt-get install python3-dev -y
+
           wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz
           tar -xzf ta-lib-0.4.0-src.tar.gz
           cd ta-lib
+
           wget 'http://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.guess;hb=HEAD' -O './config.guess'
           wget 'http://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.sub;hb=HEAD' -O './config.sub'
           ./configure --prefix=/usr
           make
           sudo make install
+
+          sudo rm -rf ta-lib
+          sudo rm -rf ta-lib-0.4.0-src.tar.gz
+
           pip install ta-lib
         
       - name: Setup pip and typer-cli
@@ -62,9 +68,11 @@ jobs:
           echo $PYTHONPATH
           typer cli.py utils docs --name wooster --output docs/source/cli.md
 
+      - name: Install docs dependencies
+        run: pip install -r docs/requirements.txt
+
       - name: Build docs with sphinx
         run: |
-          pip install -r docs/requirements.txt
           cd docs && make html && cd ..
 
       - name: Configure git
