--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -33,6 +33,7 @@ jobs:
           linux: |
             sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y
             sudo apt install wget -y
+            sudo apt install software-properties-common -y
             sudo add-apt-repository ppa:deadsnakes/ppa -y
             sudo apt-get install build-essential -y
             sudo apt install python3.10-dev -y
