--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-latest"]
-        python: ["3.10", "3.11"]
+        python: ["3.10"]
 
     runs-on: ${{ matrix.os }}
 
