--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         os: ["ubuntu-latest"]
         python: ["3.10", "3.11"]
+      fail-fast: false
 
     runs-on: ${{ matrix.os }}
 
